fix: correct webui_static path and add --dev flag
- Fix path calculation to find built static files in correct location
- Add --dev flag for development mode with hot reload
- Remove source code from package distribution (only built assets)
- Update documentation for new production/development modes

Resolves issue where 'stratequeue webui' failed to find built frontend.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,15 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: "3.x"
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'npm'
+        cache-dependency-path: webui/package-lock.json
+    - name: Build frontend
+      run: |
+        python tools/build_frontend.py
     - name: Install pypa/build
       run: >-
         python3 -m
