--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,8 @@ dependencies = [
     "rich>=13.0.0",
     "pydantic>=2.0,<2.12",
     "yfinance==0.2.65",
-    "nest_asyncio>=1.5.0"
+    "nest_asyncio>=1.5.0",
+    "empyrical>=0.5.5"
 ]
 
 [project.optional-dependencies]
